# rag_learning_udemy

./: pyproject.toml
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataParsingdoc.ipynb
0-DataIngestParsing/data/text_files/: machine_learning.txt  python_intro.txt
