[project]
name = "ragudemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==1.0.13",
    "faiss-cpu==1.11.0",
    "ipykernel==6.29.5",
    "ipywidgets>=8.1.7",
    "langchain==0.3.26",
    "langchain-community==0.3.26",
    "langchain-groq==0.3.4",
    "langchain-openai==0.3.27",
    "pandas==2.3.0",
    "pypdf==5.7.0",
    "python-dotenv==1.1.1",
    "sentence-transformers==4.1.0",
    "tiktoken==0.9.0",
]
